# for display continuity sake please use 2 spaces instead of tabs

2013-12-28 Giuseppe Aruta (giuseppe_aruta@yahoo.it)
   * Rewrite ChangeRasterImagePropertiesPlugIn as a Multi dialog
   Added Transparency, Scale transparency and Color Editor panels 

2014-12-21 mmichaud <m.michael.michaud@orange.fr>
  * fix #383 about project files and gml-fme files encoding (reading)

2014-12-20 mmichaud <m.michael.michaud@orange.fr>
  * fix #383 about project files and gml-fme files encoding (writing)
  * fix #381 about angle constraint dialog box
  * fr #212 add "exclude empty geometries" option to
    "select feature by geometry type" tool

2014-12-19 mmichaud <m.michael.michaud@orange.fr>
  * now possible to use negative values in MultiRingBufferSelectedPlugin

2014-12-18 mmichaud <m.michael.michaud@orange.fr>
  * add CTSPlugIn in PLUS distribution

* release 1.8.0 ***************************************************************

2014-12-01 ede
  * beautified attribtab edit geom buttons, icons visualize (partly) empty 
    geometries now with grayed out icons and pink background
  * JML/GML reader: fixed support for (empty) multigeometries and linearrings
  * JML/GML write: fix writing empty point geoms
  * attribtab keeps selection order now
  * add union/merge/geomconv to attribute table popup
  * geometry converter converts empty geoms now
  * disable wildcard extensions for image filelayerloaders

2014-11-26 ede
  * reworked native lib support, read lib/native/readme.txt
  * streamlined start script outputs on all 3 platforms

2014-11-26 mmichaud <m.michael.michaud@orange.fr>
  * fixpart #379 in PostGIS Driver (new) : delete was not working
    for a table with special characters.

2014-11-25 ede
  * PLUS: added Concave Hull plugin by Eric Grosso
  * oj_windows.bat: add java arch native path support for windows
  * iconified DeleteAllFeaturesPlugIn, CombineSelectedLayersPlugIn
  * moved CombineSelectedLayersPlugIn up within layerpopup menu
  
2014-11-24 ede