@@ -1,6 +1,9 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
-2013-12-28 Giuseppe Aruta (giuseppe_aruta@yahoo.it)
+2015-01-03 Giuseppe Aruta (giuseppe_aruta@yahoo.it)
+   * HTMLPanel. Added Option to save window to HTML page
+
+2014-12-28 Giuseppe Aruta (giuseppe_aruta@yahoo.it)
    * Rewrite ChangeRasterImagePropertiesPlugIn as a Multi dialog
    Added Transparency, Scale transparency and Color Editor panels 
 
